Fix screen shift on card modal
Fixed the screen shifting to the left when opening a card modal in a gallery with no rows filled with the maximum number of images.

--- a/src/components/gallery/Gallery.css
+++ b/src/components/gallery/Gallery.css
@@ -1,3 +1,7 @@
+.main {
+  width: 100%;
+}
+
 .Gallery-container{
     width: 100%;
     display: flex;
